# BinnaryClassify-ML

./: README.md  pyproject.toml
model/: churn-model.pkl
project/: FlaskApi.py  ModelML.ipynb
tests/: test_binnaryclassify_ml.py
