[tool.poetry]
name = "BinnaryClassify-ML"
version = "0.1.0"
description = ""
authors = ["AntonioRG00 <antoniorg00@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
ipykernel = "^6.4.2"
Flask = "^2.0.2"
sklearn = "^0.0"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
